<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    android:padding="24dp"
    tools:context=".View.MainActivity">

    <!-- לוגו DriveKit -->
    <LinearLayout
        android:id="@+id/logoContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/logoKit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kit"
            android:textColor="#8BC34A"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/logoDrive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Drive"
            android:textColor="#001F3F"
            android:textSize="48sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- כותרת למסך הלוגין -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="כניסה"
        android:textSize="20sp"
        android:textColor="#E0E0E0"
        app:layout_constraintTop_toBottomOf="@id/logoContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- שדה Email -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="#99FFFFFF"
        app:boxStrokeColor="#8BC34A"
        app:hintTextColor="#001F3F"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="אימייל"
            android:inputType="textEmailAddress"
            android:textColor="#001F3F"
            android:textColorHint="#001F3F"
            android:padding="12dp"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- שדה Password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="#99FFFFFF"
        app:boxStrokeColor="#8BC34A"
        app:hintTextColor="#001F3F"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="סיסמה"
            android:inputType="textPassword"
            android:textColor="#001F3F"
            android:textColorHint="#001F3F"
            android:padding="12dp"
            android:textSize="16sp" />


    </com.google.android.material.textfield.TextInputLayout>



    <!-- כפתור Login -->

    <!-- כפתור Signup -->

    <!-- Divider: או -->

    <Button
        android:id="@+id/signupButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#D6D6D6"
        android:text="הרשמה"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/googleLoginButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#D6D6D6"
        android:text="התחברות עם Google"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textStyle="bold"

        app:icon="@drawable/ic_google"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconSize="30dp"
        app:iconTint="@null"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orDivider" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#D6D6D6"
        android:text="התחברות"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout" />

    <LinearLayout
        android:id="@+id/orDivider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupButton">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#66E0E0E0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="או"
            android:textColor="#E0E0E0"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#66E0E0E0" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:text="שכחתי סיסמה"
        android:textColor="#4169E1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457" />


</androidx.constraintlayout.widget.ConstraintLayout>
